[metadata]
name = plush-fabric
version = 0.5.8
author = Kevin Barnes
author_email = kbarnes3@gmail.com
description = Helper library for Fabric to simplify creating and managing GitHub deploy keys when deploying GitHub-hosted repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kbarnes3/Plush
project_urls =
    Bug Tracker = https://github.com/kbarnes3/Plush/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
keywords = Fabric, GitHub, deployment
[options]
packages = 
    plush
    plush.fabric_commands
python_requires = >=3.10
install_requires =
    oauth2client>=4.1.3
    PyGithub>=1.58
    keyring>=23.13.1
    fabric>=2.7.1
    patchwork>=1.0.1
    colorama>=0.4.6

[options.entry_points]
console_scripts =
    auth = plush.console:auth_entry
    listkeys = plush.console:list_keys_entry

[options.extras_require]
test = pylint
publish = 
    build
    twine